--- a/music/templates/login.html
+++ b/music/templates/login.html
@@ -84,6 +84,11 @@
             <input type="password" id="password" name="password" required>
             <input type="submit" value="Login">
         </form>
+        <form action="{%url 'music:signup' %}" method="post">
+            {% csrf_token %}
+            <label for="password">Don't have an account? </label>
+            <input type="submit" value="Sign up">
+        </form>
     </div>
 </body>
 </html>
